--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-dnd": "^7.6.0",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-router": "^5.0.0",
