--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "immutability-helper": "^3.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-dnd": "^7.6.0",
+    "react-dnd": "^7.7.0",
     "react-dnd-html5-backend": "^8.0.3",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
