--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "array-move": "^2.1.0",
     "axios": "^0.19.0",
     "immutability-helper": "^3.0.1",
     "node-sass": "^4.12.0",
@@ -13,7 +14,9 @@
     "react-google-maps": "^9.4.5",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-sortable-hoc": "^1.9.1",
+    "react-sortable-list": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
