--- a/package.json
+++ b/package.json
@@ -5,18 +5,14 @@
   "dependencies": {
     "array-move": "^2.1.0",
     "axios": "^0.19.0",
-    "immutability-helper": "^3.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-dnd": "^7.7.0",
-    "react-dnd-html5-backend": "^8.0.3",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "react-sortable-hoc": "^1.9.1",
-    "react-sortable-list": "^1.1.0"
+    "react-sortable-hoc": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
