--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "array-move": "^2.1.0",
     "axios": "^0.19.0",
+    "dom-to-image": "^2.6.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
