--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "array-move": "^2.1.0",
     "axios": "^0.19.0",
     "dom-to-image": "^2.6.0",
+    "html2canvas": "^1.0.0-rc.3",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
